--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -271,6 +271,16 @@
         </div>
     </div>
 
-    <script src="/static/app.js"></script>
+    <!-- Modular JavaScript files -->
+    <script src="/static/js/state.js"></script>
+    <script src="/static/js/utils.js"></script>
+    <script src="/static/js/api.js"></script>
+    <script src="/static/js/ui.js"></script>
+    <script src="/static/js/categoryManager.js"></script>
+    <script src="/static/js/postManager.js"></script>
+    <script src="/static/js/fileManager.js"></script>
+    <script src="/static/js/imageViewer.js"></script>
+    <script src="/static/js/activityTracker.js"></script>
+    <script src="/static/js/main.js"></script>
 </body>
 </html>
