--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -275,6 +275,7 @@
     <script src="/static/js/state.js"></script>
     <script src="/static/js/utils.js"></script>
     <script src="/static/js/api.js"></script>
+    <script src="/static/js/virtualScroll.js"></script>
     <script src="/static/js/ui.js"></script>
     <script src="/static/js/categoryManager.js"></script>
     <script src="/static/js/postManager.js"></script>
