--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -131,6 +131,8 @@
         backdrop-filter: blur(8px);
         -webkit-backdrop-filter: blur(8px);
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
     }
 
     .timeline-content {
