--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -509,6 +509,7 @@
     </div>
 
     <!-- Modular JavaScript files -->
+    <script src="/static/js/constants.js"></script>
     <script src="/static/js/router.js"></script>
     <script src="/static/js/state.js"></script>
     <script src="/static/js/utils.js"></script>
