improvement regarding prev commit

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -201,7 +201,7 @@
                     <div id="activity-container" class="bg-white rounded-lg shadow-sm border px-3 py-3 hidden lg:block" style="display: none;">
                     <!-- Category Breadcrumb -->
                     <div id="activity-category-breadcrumb" class="mb-4">
-                        <span class="text-xs font-semibold text-gray-700">All Categories</span>
+                        <!-- Breadcrumb will be generated dynamically -->
                     </div>
 
                     <!-- Centered Date Range with Navigation -->
@@ -226,15 +226,8 @@
 
                     <!-- Legend and Summary -->
                     <div class="flex items-center justify-between text-xs mt-6">
-                        <div class="flex flex-col space-y-1">
-                            <div class="flex items-center space-x-2">
-                                <div class="w-2 h-2 bg-gray-100 rounded-sm"></div>
-                                <span class="text-gray-400">Less</span>
-                            </div>
-                            <div class="flex items-center space-x-2">
-                                <div class="w-2 h-2 bg-green-500 rounded-sm"></div>
-                                <span class="text-gray-400">More</span>
-                            </div>
+                        <div id="activity-legend" class="flex flex-col space-y-1">
+                            <!-- Legend will be generated dynamically -->
                         </div>
                         <span id="activity-summary" class="text-gray-500"></span>
                     </div>
