ai code reog + alert message

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -639,6 +639,7 @@
     <script src="/static/js/router.js"></script>
     <script src="/static/js/state.js"></script>
     <script src="/static/js/utils.js"></script>
+    <script src="/static/js/alertSystem.js"></script>
     <script src="/static/js/api.js"></script>
     <script src="/static/js/virtualScroll.js"></script>
     <script src="/static/js/ui.js"></script>
@@ -649,7 +650,6 @@
     <script src="/static/js/linkPreview.js"></script>
     <script src="/static/js/activityTracker.js"></script>
     <script src="/static/js/stickyHeader.js"></script>
-    <script src="/static/js/fileUploadText.js"></script>
     <script src="/static/js/settings.js"></script>
     <script src="/static/js/main.js"></script>
 </body>
