--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -47,7 +47,7 @@
     }
     </script>
     {{end}}
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com/3.4.17"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
 </head>
