--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -573,7 +573,7 @@
                         <div id="modal-retroactive-header" class="flex items-center space-x-2 ml-4" style="display: none;">
                             <div class="flex items-center space-x-1">
                                 <i class="fas fa-clock text-xs text-gray-400"></i>
-                                <input type="datetime-local" id="modal-post-datetime" class="text-xs border border-gray-300 rounded px-2 py-1 focus:outline-none focus:ring-1 focus:ring-blue-500" style="width: 140px;">
+                                <input type="datetime-local" id="modal-post-datetime" class="text-sm border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" style="min-width: 160px;">
                             </div>
                             <button type="button" id="modal-set-current-time" class="text-xs text-blue-600 hover:text-blue-800 px-1 py-1 rounded hover:bg-blue-50">
                                 <i class="fas fa-sync text-xs"></i>
